// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> should render a large badge 1`] = `
.c0 {
  background-color: #EDF4FF;
  color: #00368C;
  border: 1px solid #C5CED6;
  box-shadow: 0 2px 2px rgba(0,0,0,0.24);
  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0,
.c0 .icon {
  font-size: 21px;
  width: 30px;
  height: 30px;
  line-height: 30px;
}

.c0 .refresh-icon {
  background-color: transparent;
  position: relative;
  top: -1px;
  left: -1px;
}

<Badge
  backgroundColor="#EDF4FF"
  color="#00368C"
  label={6}
  size="large"
>
  <styled.span
    backgroundColor="#EDF4FF"
    color="#00368C"
    hasBorder={true}
    size="large"
  >
    <StyledComponent
      backgroundColor="#EDF4FF"
      color="#00368C"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  &, .icon {
  ",
              [Function],
              "
  }

  ",
              [Function],
              "

  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  user-select: none;
  ",
              [Function],
              "

  .refresh-icon {
    background-color: transparent;
    position: relative;
    top: -1px;
    left: -1px;
  }
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      hasBorder={true}
      size="large"
    >
      <span
        className="c0"
        color="#00368C"
        size="large"
      >
        6
      </span>
    </StyledComponent>
  </styled.span>
</Badge>
`;

exports[`<Badge /> should render a small badge 1`] = `
.c0 {
  background-color: #EDF4FF;
  color: #00368C;
  border: 1px solid #C5CED6;
  box-shadow: 0 2px 2px rgba(0,0,0,0.24);
  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0,
.c0 .icon {
  font-size: 12px;
  width: 20px;
  height: 20px;
  line-height: 20px;
}

.c0 .refresh-icon {
  background-color: transparent;
  position: relative;
  top: -1px;
  left: -1px;
}

<Badge
  backgroundColor="#EDF4FF"
  color="#00368C"
  label={6}
>
  <styled.span
    backgroundColor="#EDF4FF"
    color="#00368C"
    hasBorder={true}
    size="small"
  >
    <StyledComponent
      backgroundColor="#EDF4FF"
      color="#00368C"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  &, .icon {
  ",
              [Function],
              "
  }

  ",
              [Function],
              "

  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  user-select: none;
  ",
              [Function],
              "

  .refresh-icon {
    background-color: transparent;
    position: relative;
    top: -1px;
    left: -1px;
  }
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      hasBorder={true}
      size="small"
    >
      <span
        className="c0"
        color="#00368C"
        size="small"
      >
        6
      </span>
    </StyledComponent>
  </styled.span>
</Badge>
`;

exports[`<Badge /> should render a spinning badge 1`] = `
.c1 {
  display: inline-block;
  font-stretch: normal;
  --fa-primary-color: #2512B3;
  --fa-secondary-color: #2512B3;
}

.c1.icon {
  text-align: center;
  font-size: 1rem;
}

.c0 {
  background-color: #EDF4FF;
  color: #00368C;
  border: 1px solid #C5CED6;
  box-shadow: 0 2px 2px rgba(0,0,0,0.24);
  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0,
.c0 .icon {
  font-size: 12px;
  width: 20px;
  height: 20px;
  line-height: 20px;
}

.c0 .refresh-icon {
  background-color: transparent;
  position: relative;
  top: -1px;
  left: -1px;
}

<Badge
  backgroundColor="#EDF4FF"
  color="#00368C"
  label={6}
  pending={true}
>
  <styled.span
    backgroundColor="#EDF4FF"
    color="#00368C"
    hasBorder={true}
    size="small"
  >
    <StyledComponent
      backgroundColor="#EDF4FF"
      color="#00368C"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  &, .icon {
  ",
              [Function],
              "
  }

  ",
              [Function],
              "

  border-radius: 50%;
  display: inline-block;
  font-weight: 600;
  text-align: center;
  user-select: none;
  ",
              [Function],
              "

  .refresh-icon {
    background-color: transparent;
    position: relative;
    top: -1px;
    left: -1px;
  }
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      hasBorder={true}
      size="small"
    >
      <span
        className="c0"
        color="#00368C"
        size="small"
      >
        <FontAwesomeIcon
          className="refresh-icon"
          icon="sync"
          isSpinning={true}
          type="solid"
        >
          <Icon
            className="refresh-icon"
            icon="fas fa-sync"
            isSpinning={true}
          >
            <styled.i
              aria-hidden={true}
              className="refresh-icon icon fas fa-sync fa-spin"
              size="medium"
            >
              <StyledComponent
                aria-hidden={true}
                className="refresh-icon icon fas fa-sync fa-spin"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-htpNat",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  display: inline-block;
  font-stretch: normal;
  --fa-primary-color: ",
                        "#2512B3",
                        ";
  --fa-secondary-color: ",
                        "#2512B3",
                        ";

  ",
                        [Function],
                        "

  ",
                        [Function],
                        "
  ",
                        [Function],
                        "

  ",
                        [Function],
                        "

  ",
                        [Function],
                        "

  ",
                        [Function],
                        "

  ",
                        [Function],
                        "

  ",
                        [Function],
                        "

  &.icon {
    text-align: center;

  ",
                        [Function],
                        "
  }
",
                      ],
                    },
                    "displayName": "styled.i",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-htpNat",
                    "target": "i",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                size="medium"
              >
                <i
                  aria-hidden={true}
                  className="refresh-icon icon fas fa-sync fa-spin c1"
                  size="medium"
                />
              </StyledComponent>
            </styled.i>
          </Icon>
        </FontAwesomeIcon>
      </span>
    </StyledComponent>
  </styled.span>
</Badge>
`;
